manifests/infra/node-feature-discovery.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-feature-discovery
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
